# publication-service

./: .gitignore  main.py  pyproject.toml
account/: models.py  permissions.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_user_role.py  0003_user_auth_token.py  0004_remove_user_auth_token.py
config/: settings.py  urls.py
middleware/: authentication.py  logging.py
